syntax = "proto3";


service UserDataManager {
    rpc AddUser(UserData) returns (AddUserResponse) {}
    rpc GetUser(GetUserRequest) returns (UserData) {}
    rpc GetUserByUsernameOrEmail(GetUserByUsernameOrEmailRequest) returns (UserData) {}
    rpc AuthUser(AuthUserRequest) returns (AuthUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

//AddUser Function
message UserData {
    map<string, string> data = 1;
    string error = 2;
}

message AddUserResponse {
    string userID = 3;
    string error = 4;
}

//GetUser Function
message GetUserRequest {
    string userID= 9;
}


//GetUserIDByUsername Function
message GetUserByUsernameOrEmailRequest {
    string username = 10;
    string email = 11;
}


//Auth User Function
message AuthUserRequest {
    string username = 14;
    string email = 15;
    string password = 16;
}

message AuthUserResponse {
    bool valid = 17;
    string error = 18;
    string userID = 27;
}

//UpdateUser Function
message UpdateUserRequest {
    string userID = 19;
    string field = 20;
    string updatedValue = 21;
}

message UpdateUserResponse {
    string error = 22;
}

//DeleteUser Function
message DeleteUserRequest {
    string userID = 23;
    string username = 24;
    string password = 25;
}

message DeleteUserResponse {
    string error = 26;
}
